--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             <p>Loading Exam...</p>
         </div>
 
-        <!-- ## Pause Overlay যোগ করা হয়েছে ## -->
         <div id="pause-overlay" class="pause-overlay hidden">
             <div class="pause-content">
                 <i class="fas fa-pause-circle"></i>
@@ -37,7 +36,6 @@
             <header class="exam-header">
                 <div class="logo">RRB NTPC CBT-1</div>
                 <div class="header-center">
-                    <!-- ## Pause বাটন যোগ করা হয়েছে ## -->
                     <button
                         id="pause-btn"
                         class="header-icon-btn"
@@ -47,17 +45,26 @@
                     </button>
                     <div class="timer-container">
                         <i class="far fa-clock"></i>
-                        <span>Time Left:</span>
+                        <span class="desktop-only">Time Left:</span>
                         <div id="timer">00:00:00</div>
                     </div>
                 </div>
-                <div class="user-profile">
+                <div class="user-profile desktop-only">
                     <i class="fas fa-user-circle"></i>
                     <span id="user-display-name">Guest</span>
                 </div>
+                <!-- ## মোবাইল ভিউ-এর জন্য নতুন বাটন ## -->
+                <button
+                    id="toggle-palette-btn"
+                    class="header-icon-btn mobile-only"
+                    title="Toggle Palette"
+                >
+                    <i class="fas fa-th-large"></i>
+                    <span class="mobile-btn-text">Palette</span>
+                </button>
             </header>
 
-            <main class="exam-body">
+            <main id="exam-body" class="exam-body">
                 <div class="question-section">
                     <div class="question-header">
                         <h3 id="question-number">Question No. 1</h3>
@@ -80,6 +87,13 @@
                 </div>
 
                 <aside class="palette-section">
+                    <!-- ## মোবাইল ভিউ-এর জন্য নতুন বাটন ## -->
+                    <button
+                        id="back-to-question-btn"
+                        class="back-btn mobile-only"
+                    >
+                        <i class="fas fa-arrow-left"></i> Back to Question
+                    </button>
                     <div class="palette-legend">
                         <div>
                             <span class="palette-dot answered"></span> Answered
