--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                     >
                         <i class="fas fa-pause"></i>
                     </button>
+                    <!-- ## রিস্টার্ট বাটন যোগ করা হয়েছে ## -->
+                    <button
+                        id="restart-btn"
+                        class="header-icon-btn"
+                        title="Restart Exam"
+                    >
+                        <i class="fas fa-redo"></i>
+                    </button>
                     <div class="timer-container">
                         <i class="far fa-clock"></i>
                         <span class="desktop-only">Time Left:</span>
@@ -53,7 +61,6 @@
                     <i class="fas fa-user-circle"></i>
                     <span id="user-display-name">Guest</span>
                 </div>
-                <!-- ## মোবাইল ভিউ-এর জন্য নতুন বাটন ## -->
                 <button
                     id="toggle-palette-btn"
                     class="header-icon-btn mobile-only"
@@ -87,7 +94,6 @@
                 </div>
 
                 <aside class="palette-section">
-                    <!-- ## মোবাইল ভিউ-এর জন্য নতুন বাটন ## -->
                     <button
                         id="back-to-question-btn"
                         class="back-btn mobile-only"
