--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="pause-content">
                 <i class="fas fa-pause-circle"></i>
                 <h2>Exam Paused</h2>
-                <p>আপনি পরীক্ষাটি 잠시 বিরতি দিয়েছেন।</p>
+                <p>আপনি পরীক্ষাটি বিরতি দিয়েছেন।</p>
                 <button id="resume-btn-overlay">Resume Exam</button>
             </div>
         </div>
