--- a/index.html
+++ b/index.html
@@ -50,16 +50,13 @@
         </div>
 
         <div id="exam-container" class="exam-container hidden">
-            <!-- === ## মোবাইল হেডারের HTML আপডেট করা হয়েছে ## === -->
             <header class="exam-header">
                 <div class="logo">RRB NTPC CBT-1</div>
-
                 <div class="timer-container">
                     <i class="far fa-clock"></i>
                     <span class="desktop-only">Time Left:</span>
                     <div id="timer">00:00:00</div>
                 </div>
-
                 <div class="header-actions">
                     <div class="desktop-only">
                         <button
@@ -81,7 +78,6 @@
                         <i class="fas fa-user-circle"></i>
                         <span id="user-display-name">Guest</span>
                     </div>
-                    <!-- মোবাইল ভিউতে শুধু আইকন বাটন -->
                     <button
                         id="toggle-palette-btn"
                         class="header-icon-btn mobile-only"
@@ -101,7 +97,6 @@
                         <p id="question-text"></p>
                     </div>
                     <div id="options-container" class="options-container"></div>
-                    <!-- === ## মোবাইল ভিউ এর জন্য ফুটার বাটন আপডেট করা হয়েছে ## === -->
                     <div class="question-footer">
                         <button id="mark-review-btn">
                             <i class="fas fa-star"></i>
@@ -120,6 +115,8 @@
                         </button>
                     </div>
                 </div>
+
+                <!-- === ## Palette Section আপডেট করা হয়েছে ## === -->
                 <aside class="palette-section">
                     <button
                         id="back-to-question-btn"
@@ -150,6 +147,23 @@
                     <hr class="palette-divider" />
                     <div class="palette-header"><h4>Question Palette</h4></div>
                     <div id="question-palette" class="question-palette"></div>
+
+                    <!-- === নতুন বাটনগুলো এখানে যোগ করা হয়েছে === -->
+                    <div class="palette-actions">
+                        <button
+                            id="question-paper-btn"
+                            class="action-btn-secondary"
+                        >
+                            Question Paper
+                        </button>
+                        <button
+                            id="instructions-btn"
+                            class="action-btn-secondary"
+                        >
+                            Instructions
+                        </button>
+                    </div>
+
                     <button id="submit-btn" class="submit-btn">
                         <i class="fas fa-check-circle"></i> Submit Test
                     </button>
@@ -157,18 +171,67 @@
             </main>
         </div>
 
+        <!-- === Submit Modal (রিভিউ টেবিলের জন্য আপডেট করা হয়েছে) === -->
         <div id="submit-modal" class="modal">
             <div class="modal-content">
-                <span class="close-btn">&times;</span>
-                <h2>Test Summary</h2>
-                <table id="summary-table"></table>
-                <p class="warning-text">
-                    আপনি কি নিশ্চিত?<br /><b
-                        >মনে রাখবেন: প্রতি ৩টি ভুল উত্তরের জন্য ১ নম্বর কাটা
-                        হবে।</b
-                    >
-                </p>
-                <button id="final-submit-btn">Confirm & Submit</button>
+                <span id="close-submit-modal" class="close-btn">&times;</span>
+                <h2>Review test before submit</h2>
+                <table id="review-summary-table">
+                    <thead>
+                        <tr>
+                            <th>Section</th>
+                            <th>Total</th>
+                            <th>Answered</th>
+                            <th>Not Answered</th>
+                            <th>Marked</th>
+                            <th>Not Visited</th>
+                        </tr>
+                    </thead>
+                    <tbody id="review-summary-body">
+                        <!-- JS দিয়ে এখানে ডেটা আসবে -->
+                    </tbody>
+                </table>
+                <p class="warning-text">আপনি কি পরীক্ষাটি জমা দিতে চান?</p>
+                <div class="modal-actions">
+                    <button id="cancel-submit-btn" class="action-btn-secondary">
+                        Go Back
+                    </button>
+                    <button id="final-submit-btn" class="submit-btn">
+                        Yes, Submit
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- === ## নতুন Modal গুলো এখানে যোগ করা হয়েছে ## === -->
+
+        <!-- Question Paper Modal -->
+        <div id="question-paper-modal" class="modal">
+            <div class="modal-content qp-modal-content">
+                <div class="qp-header">
+                    <h2>Question Paper</h2>
+                    <span id="close-qp-modal" class="close-btn">&times;</span>
+                </div>
+                <div id="question-paper-view" class="qp-view">
+                    <!-- JavaScript দিয়ে এখানে প্রশ্ন লোড হবে -->
+                </div>
+            </div>
+        </div>
+
+        <!-- Instructions Modal -->
+        <div id="instructions-modal" class="modal">
+            <div class="modal-content">
+                <span id="close-instructions-modal" class="close-btn"
+                    >&times;</span
+                >
+                <h2>Exam Instructions</h2>
+                <div class="instructions-content">
+                    <p>১. এই পরীক্ষায় মোট ১০০টি প্রশ্ন রয়েছে।</p>
+                    <p>২. পরীক্ষার মোট সময় ৯০ মিনিট।</p>
+                    <p>৩. প্রতিটি সঠিক উত্তরের জন্য ১ নম্বর যোগ করা হবে।</p>
+                    <p>৪. প্রতি ৩টি ভুল উত্তরের জন্য ১ নম্বর কাটা হবে।</p>
+                    <!-- আপনি এখানে আরও নির্দেশাবলী যোগ করতে পারেন -->
+                </div>
             </div>
         </div>
 
