--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <option value="" disabled selected>
                         -- একটি পরীক্ষা বাছুন --
                     </option>
-                    <option value="cbt1">Practice Set 1</option>
-                    <option value="cbt2">Practice Set 2</option>
+                    <option value="cbt1">Mock Test 1</option>
+                    <option value="cbt2">Mock Test 2</option>
                     <option value="groupd">RRB Group D</option>
                 </select>
                 <button id="start-exam-btn">পরীক্ষা শুরু করুন</button>
