--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </option>
                     <option value="cbt1">Practice Set 1</option>
                     <option value="cbt2">Practice Set 2</option>
-                    <option value="groupd">RRB Group D</option>
+                    <option value="cbt3">Practice Set 3</option>
                 </select>
                 <button id="start-exam-btn">পরীক্ষা শুরু করুন</button>
             </div>
