--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <option value="cbt1">Practice Set 1</option>
                     <option value="cbt2">Practice Set 2</option>
                     <option value="cbt3">Practice Set 3</option>
+                    <option value="cbt4">RRB-Group-D-PYQ-SET-1</option>
                 </select>
                 <button id="start-exam-btn">পরীক্ষা শুরু করুন</button>
             </div>
