--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <option value="cbt4">Previous-year-Set-1</option>
                     <option value="cbt5">Previous-year-Set-2</option>
                     <option value="cbt6">Previous-Year-Set-3</option>
+                    <option value="cbt7">Previous-Year-Set-4</option>
                 </select>
                 <button id="start-exam-btn">পরীক্ষা শুরু করুন</button>
             </div>
